<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2026 che2n3jigw.
  ~
  ~ Licensed under the MIT License (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ https://opensource.org/licenses/MIT
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="setting_title">设置</string>
    <string name="setting_login">登录</string>
    <string name="setting_logout">退出登录</string>
    <string name="setting_author">作者: che2n3jigw</string>
    <string name="setting_blog">博客: che2n3jigw.github.io</string>
    <string name="setting_issue">问题反馈</string>
    <string name="setting_version">版本: %1$s</string>
    <string name="setting_get_version_failed">获取版本信息失败</string>

    <string name="setting_offline_storage">离线存储</string>
    <string name="setting_storage_limit">2GB限制</string>
    <string name="setting_storage_usage">当前使用 %1$s</string>
    <string name="setting_clear_cache">清除缓存</string>
    <string name="setting_test_connection">测试连通性</string>
    <string name="setting_connection_success">连接服务器成功</string>
    <string name="setting_connection_failed">无法连接服务器</string>

    <string name="setting_donate">在线乞讨(点击关闭)</string>
</resources>