<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2026 che2n3jigw.
  ~
  ~ Licensed under the MIT License (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ https://opensource.org/licenses/MIT
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view_split"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:checkable="false"
        android:clickable="false"
        android:focusable="false"
        app:cardBackgroundColor="#20201F"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/view_split">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:text="guest" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:textColor="@color/text_secondary"
            android:textSize="12sp"
            tools:text="192.168.50.5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mb_test_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/setting_login_bg"
            android:text="@string/setting_test_connection"
            android:textColor="@color/text_primary"
            android:textSize="12sp"
            app:cornerRadius="16dp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/siv_avatar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:cornerSize="24dp" />

    </com.google.android.material.card.MaterialCardView>

    <FrameLayout
        android:id="@+id/fl_cache"
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/setting_bg_rounded_container_16"
        app:layout_constraintTop_toBottomOf="@id/mcv_user">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|start"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/setting_offline_storage"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_storage_usage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|start"
            android:layout_marginStart="24dp"
            android:layout_marginTop="48dp"
            android:text="@string/setting_storage_usage"
            android:textColor="@color/setting_info"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_marginTop="34dp"
            android:layout_marginEnd="24dp"
            android:text="@string/setting_storage_limit"
            android:textColor="@color/text_primary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/lpi_used"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="96dp"
            android:indeterminate="false"
            app:indicatorColor="@color/color_secondary"
            app:trackColor="@color/setting_login_bg"
            app:trackCornerRadius="4dp"
            app:trackThickness="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mb_clear_cache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/setting_login_bg"
            android:paddingHorizontal="24dp"
            android:text="@string/setting_clear_cache"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:cornerRadius="16dp" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_donate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@drawable/setting_bg_rounded_container_16"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fl_cache">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_donate"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="36dp"
            app:srcCompat="@drawable/donate" />

    </FrameLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_login"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_marginHorizontal="24dp"
        android:backgroundTint="@color/setting_login_bg"
        android:text="@string/setting_login"
        android:textColor="@color/setting_login_label"
        app:cornerRadius="16dp"
        app:iconGravity="textStart"
        app:iconTint="@color/setting_login_label"
        app:layout_constraintBottom_toTopOf="@id/ll_info" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_logout"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_marginHorizontal="24dp"
        android:backgroundTint="@color/setting_logout_bg"
        android:text="@string/setting_logout"
        android:textColor="@color/setting_logout_label"
        app:cornerRadius="16dp"
        app:icon="@drawable/setting_icon_logout"
        app:iconGravity="textStart"
        app:iconTint="@color/setting_logout_label"
        app:layout_constraintBottom_toTopOf="@id/ll_info"
        app:strokeColor="#33FF6E84" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/setting_author"
            android:textColor="@color/setting_info"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/setting_blog"
            android:textColor="@color/setting_info"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/setting_version"
            android:textColor="@color/setting_info"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_issue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:padding="8dp"
            android:text="@string/setting_issue"
            android:textColor="@color/setting_info_url"
            android:textSize="12sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>